--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/0d2aea1e52.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--style sheet-->
     <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
@@ -43,6 +49,127 @@
           </div>
         </div>
         <hr />
+        <div class="top-blogs">
+          <h2 class="section-title">Top Blogs</h2>
+          <div class="blogs">
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-1.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-2.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-3.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-4.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <!--leatest course-->
+      <section class="container">
+        <h2 class="section-title">Lates Course</h2>
+        <div class="courses">
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-1.png" alt="" />
+            </div>
+            <div class="coursse-detail">
+              <h3 class="course-title">React - The Complete Guide 2022</h3>
+              <p class="course-author">Reed Krakoff</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-2.png" alt="" />
+            </div>
+            <div class="coursse-detail">
+              <h3 class="course-title">
+                Powerpoint 2022 Master Powerpoint Cour
+              </h3>
+              <p class="course-author">Reed Krakoff</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-3.png" alt="" />
+            </div>
+            <div class="coursse-detail">
+              <h3 class="course-title">The Complete JavaScript Course 2022</h3>
+              <p class="course-author">Reed Krakoff</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
